--- a/css/main.css
+++ b/css/main.css
@@ -3,20 +3,18 @@
 
 
 body {
-  padding-top: 8%;
+  padding-top: 5%;
   font-family: "Lato", sans-serif;
-  background-color: #A2A3A8;
-
 }
 
 .logo {
   font-family: "Playfair Display", serif;
-  font-size: 150px;
+  font-size: 80px;
   font-weight: 900;
 }
 
 .title {
-  padding-top: 2%;
+  padding-top: 4%;
   font-size: 60px;
 }
 
@@ -29,4 +27,9 @@ body {
   padding-right: 5%;
   max-height: 100%;
   max-width: 100%;
+}
+
+.link {
+  color: red;
+  text-decoration: none;
 }
